# LivePushCameraMedia

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/livepushcameramedia/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidLog.h  CMakeLists.txt  RecordBuffer.cpp  RecordBuffer.h  native-lib.cpp
app/src/main/cpp/librtmp/: amf.c  log.c  rtmp.c
app/src/main/cpp/push/: Queue.cpp  Queue.h  RtmpPush.cpp  RtmpPush.h  RtmpPushCallJava.cpp  RtmpPushCallJava.h  push-lib.cpp
app/src/main/java/com/example/livepushcameramedia/: FboRender.kt  MainActivity.kt
app/src/main/java/com/example/livepushcameramedia/camera/: CameraActivity.kt  CameraRender.kt  CameraSurfaceView.kt  FboBlackWhiteRender.kt  GLCamera.kt
app/src/main/java/com/example/livepushcameramedia/egl/: EGLHelper.kt  EGLSurfaceRender.kt  EGLSurfaceView.kt  ShaderUtil.kt
app/src/main/java/com/example/livepushcameramedia/media/: BaseMediaEncoder.kt  MediaActivity.kt  MediaFboRender.kt  MediaSurfaceRender.kt  MediaSurfaceView.kt  MyMediaEncoder.kt  MyMediaRender.kt
app/src/main/java/com/example/livepushcameramedia/opensles/: OpenSLESActivity.kt
app/src/main/java/com/example/livepushcameramedia/picture_mp3/: PictureMp3Activity.kt  PictureMp3GlRender.kt  PictureMp3MediaEncoder.kt  PictureMp3Render.kt  PictureMp3SurfaceView.kt
app/src/main/java/com/example/livepushcameramedia/push/: AudioConfig.kt  AudioRecordHelper.kt  BasePushEncoder.kt  PushActivity.kt  PushCameraRender.kt  PushCameraSurfaceView.kt  PushEncoder.kt  PushEncoderRender.kt  RTMPPush.kt  RtmpCallBack.kt
app/src/main/java/com/example/livepushcameramedia/utils/: DrawUtil.kt
app/src/main/java/com/example/livepushcameramedia/yuv/: YuvActivity.kt  YuvFboRender.kt  YuvRender.kt  YuvSurfaceView.kt
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_media.xml  activity_opensles.xml  activity_pirture_mp3.xml  activity_push.xml  activity_yuv.xml
app/src/main/res/raw/: fragment_shader_camera.glsl  fragment_shader_camera_black_white.glsl  fragment_shader_yuv.glsl  vertex_shader.glsl  vertex_shader_camera.glsl
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/example/livepushcameramedia/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
